[package]
name = "xboxone_midi"
description = "Test using Xbox One controller as MIDI synthesizer"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasts = "0.4.0"
midir = "0.7.0"
tokio = { version = "0.2.22", features = ["full"]}
stick = "0.10"
